kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-timestamp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hostname-timestamp
  template:
    metadata:
      labels:
        app: hostname-timestamp
    spec:
      containers:
      - name: hostname-timestamp
        image: guresonur/wtitawithn:latest
        ports:
        - containerPort: 8080
