kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname-timestamp
  labels:
    name: hostname-timestamp
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hostname-timestamp
            port: 
              number: 8080
